@@ -581,15 +581,19 @@ getNovelty = function(ssm,
   ssm_padded[idx[1]:idx[2], idx[1]:idx[2]] = ssm
 
   ## get novelty
-  novelty = rep(NA, nrow(ssm))
-  # for each point on the main diagonal, novelty = correlation between the checkerboard kernel and the ssm. See Badawy, "Audio novelty-based segmentation of music concerts"
+  novelty = rep(0, nrow(ssm))
+  # for each point on the main diagonal, novelty = correlation between the
+  # checkerboard kernel and the ssm. See Badawy, "Audio novelty-based
+  # segmentation of music concerts"
   for (i in idx[1]:idx[2]) {
     n = (i - halfK):(i + halfK - 1)
     # suppress warnings, b/c otherwise cor complains of sd = 0 for silent segments
+    mat_i = ssm_padded[n, n]
+    diag(mat_i) = NA
     novelty[i - halfK] =  suppressWarnings(
-      cor(as.vector(ssm_padded[n, n]),
-          as.vector(kernel))) #'pairwise.complete.obs'))
+      cor(as.vector(mat_i), as.vector(kernel), use = 'pairwise.complete.obs')
+    )
   }
-  # novelty[is.na(novelty)] = 0
+  novelty[is.na(novelty)] = 0
   return(novelty)
 }
